@@ -664,7 +664,7 @@ svg {
 }
 
 .a0 {
-  opacity: ;
+  opacity: 0;
 }
 
 .o100 {
@@ -716,7 +716,7 @@ svg {
 }
 
 .o0 {
-  opacity: ;
+  opacity: 0;
 }
 
 .show {
